--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,29 +21,29 @@ section {
 }
 
 
-// article {
-//     margin-left: 50px;
-//     padding-top: 20px;
-//     width: 50%
-// }
+article {
+    margin-left: 50px;
+    padding-top: 20px;
+    width: 50%
+}
 
-// article, p {
-//     color: #202845;
-// }
-// img {
-//     border-radius: 5px;
-//     width: 100%;
-// }
-// article > p:nth-child(n+2) {
-//     font-size: 15pt;
-// }
+article, p {
+    color: #202845;
+}
+img {
+    border-radius: 5px;
+    width: 100%;
+}
+article > p:nth-child(n+2) {
+    font-size: 15pt;
+}
 
-// article > p:first-of-type {
-//     font-size: 40pt;
-//     font-weight: bold;
-// }
+article > p:first-of-type {
+    font-size: 40pt;
+    font-weight: bold;
+}
 
-// article > p:nth-of-type(2) {
-//     font-size: 30pt;
-//     margin-bottom: 15px;
-// }
+article > p:nth-of-type(2) {
+    font-size: 30pt;
+    margin-bottom: 15px;
+}
