--- a/src/app/housing-list/housing-list.component.html
+++ b/src/app/housing-list/housing-list.component.html
@@ -2,5 +2,8 @@
 <input id="location-search" #search placeholder="Ex: Chicago">
 <button (click)="searchHousingLocations(search.value)">Search</button>
 <article *ngFor="let location of results">
-  <p>{{ location.name }}</p>
+  <img [src]="location.photo" [alt]="location.name">
+  <p>{{ location.name}}</p>
+  <p>{{ location.city}}, {{ location.state}}</p>
+  <button (click)="selectedHouseLocation(location)">View</button>
 </article>
